# Project_get_val

./: README.md  pyproject.toml
utils/: dicts.py
