[tool.poetry]
name = "project-get-val"
version = "0.1.0"
description = ""
authors = ["Bankin93 <igorkonov1993@gmail.com>"]
readme = "README.md"
packages = [{include = "project_get_val"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
